# tauri-todo

./: .pnp.cjs  README.md  bun.lockb  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/db/: 000_init.sql
src-tauri/src/: database.rs  main.rs
src/components/: TodoItems.tsx
src/hooks/: useTodos.tsx
src/types/: todo.ts
